2007-10-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	remove duplicate code-rate-hp in xml

2007-10-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py:
	* flumotion/component/dvb/dvb.xml:
	Make code-rate-hp both DVB-T and DVB-S. Bring back old
	device property to allow backwards compatibility for configs.
	Handle old dvbsrc and new dvbsrc properly.
	Set code-rate-hp with DVB-S when specified (needed for 
	working diseq).

2007-08-14  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (configure_pipeline):
	Fix case where we have an audio only stream.
	* flumotion/component/dvb/dvb.xml:
	Should not be synchronised because we don't have a clock yet
	in the ts demuxer.

2007-08-13  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
	  _bus_message_received_cb):
	Set check-imperfect-timestamp to True not leave it in thin air!
	Add message when we receive disconts from decoders that are
	> 10 seconds or negative.

2007-08-10  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.get_pipeline_string,
	  configure_pipeline):
	Always add an identity check-imperfect-timestamp after
	decoders. Also add pad monitors to the src pads of the
	decoders so we go hungry when there is no data.

2007-07-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.py (DVB.init, DVB.do_check,
	  DVB.get_pipeline_string):
	Check for dvbsrc version and start of using new properties
	when able.
	Replace stupid par assignment.

2007-07-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/dvb/dvb.xml:
	dvb producer does not need to have such a high clock
	priority so use the default clock priority.

2007-07-04  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/dvb/dvb.xml:
	Add missing dependency.
