@@ -1,3 +1,8 @@
+2007-10-24  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	Adjust for API changes and fix up one template.
+
 2007-10-23  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
 	* flumotion/component/dvb/dvb.xml:
